[project]
name = "comfyui-ajonodes"
description = "A collection of custom nodes designed for ComfyUI from the AJO-reading organization. This repository currently includes the Audio Collect & Concat node, which collects multiple audio segments and concatenates them into a single audio stream."
version = "1.0.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/AJO-reading/ComfyUI-AjoNodes"
[tool.comfy]
PublisherId = "adamreading"
DisplayName = "ComfyUI-AjoNodes"
Icon = ""
